Update overflow issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,9 +10,10 @@
   scroll-behavior: smooth; 
 }
 
-html {
+
+#body {
   background-color: #1A232E;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .gradient-01 {
